Wed Jul 03 12:42:23 GMT 2013  Olly Betts <olly@survex.com>

	* common/safeuuid.h: Make a few tweaks to support AIX.

Wed Jul 03 12:33:40 GMT 2013  Olly Betts <olly@survex.com>

	* common/safeuuid.h: Remove bogus take-address-of from uuid handling
	  code for netbsd and openbsd.

Wed Jul 03 11:56:05 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* api/registry.cc,include/xapian/weight.h,tests/api_nodb.cc,
	  tests/api_weight.cc,weight/Makefile.mk,weight/inl2weight.cc: Add
	  implementation of DfR weighting scheme InL2.

Wed Jul 03 08:20:26 GMT 2013  Olly Betts <olly@survex.com>

	* api/error.cc,common/Makefile.mk,common/safenetdb.h,net/tcpclient.cc,
	  net/tcpserver.cc: AIX needs _USE_IRS defined for hstrerror, so
	  create safenetdb.h to take care of that.

Wed Jul 03 07:34:13 GMT 2013  Olly Betts <olly@survex.com>

	* common/safeuuid.h: Add missing '#include <cstdlib>' and qualify free
	  with std.

Tue Jul 02 23:44:48 GMT 2013  Olly Betts <olly@survex.com>

	* api/omdatabase.cc: Add support for WritableDatabase with multiple
	  subdatabases.

Tue Jul 02 23:40:08 GMT 2013  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,tests/api_none.cc: Trying to perform operations on
	  a database with no subdatabases now throws InvalidOperationError not
	  DocNotFoundError.

Tue Jul 02 13:22:31 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* tests/api_weight.cc: Extend checkstatsweight1 to check that
	  Weight::get_collection_freq() returns the same number as
	  Database::get_collection_freq().

Tue Jul 02 05:00:30 GMT 2013  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/omenquireinternal.h,
	  backends/remote/remote-database.cc,backends/remote/remote-database.h,
	  common/remoteprotocol.h,configure.ac,docs/remote_protocol.rst,
	  include/xapian/enquire.h,matcher/multimatch.cc,matcher/multimatch.h,
	  net/remoteserver.cc,tests/api_postingsource.cc: Add
	  Enquire::set_time_limit() method which sets a timelimit after which
	  check_at_least will be disabled.
