@@ -146,6 +146,8 @@ Registry::Internal::add_defaults()
     wtschemes[weighting_scheme->name()] = weighting_scheme;
     weighting_scheme = new Xapian::InL2Weight;
     wtschemes[weighting_scheme->name()] = weighting_scheme;
+    weighting_scheme = new Xapian::IfB2Weight;
+    wtschemes[weighting_scheme->name()] = weighting_scheme;
 
     Xapian::PostingSource * source;
     source = new Xapian::ValueWeightPostingSource(0);
