@@ -673,6 +673,71 @@ class XAPIAN_VISIBILITY_DEFAULT InL2Weight : public Weight {
     double get_maxextra() const;
 };
 
+/** This class implements the IfB2 weighting scheme.
+ *
+ *  IfB2 is a representative scheme of the Divergence from Randomness Framework
+ *  by Gianni Amati.
+ *
+ *  It uses the Inverse term frequency model (If), the Bernoulli method to find
+ *  the aftereffect of sampling (B) and the second wdf normalization proposed
+ *  by Amati to normalize the wdf in the document to the length of the document
+ *  (H2).
+ *
+ *  For more information about the DFR Framework and the IfB2 scheme, please
+ *  refer: Gianni Amati and Cornelis Joost Van Rijsbergen Probabilistic models
+ *  of information retrieval based on measuring the divergence from randomness
+ *  ACM Transactions on Information Systems (TOIS) 20, (4), 2002, pp. 357-389.
+ */
+class XAPIAN_VISIBILITY_DEFAULT IfB2Weight : public Weight {
+    /// The wdf normalization parameter in the formula.
+    double param_c;
+
+    /// The upper bound on the weight.
+    double upper_bound;
+
+    IfB2Weight * clone() const;
+
+    void init(double factor);
+
+  public:
+    /** Construct an IfB2Weight.
+     *
+     *  @param c  A non-negative and non zero parameter controlling the extent
+     *		  of the normalization of the wdf to the document length. The
+     *		  default value of 1 is suitable for longer queries but it may
+     *		  need to be changed for shorter queries. For more information,
+     *		  please refer to Gianni Amati's PHD thesis titled
+     *		  Probabilistic Models for Information Retrieval based on
+     *		  Divergence from Randomness.
+     */
+    explicit IfB2Weight(double c);
+
+    IfB2Weight( ) : param_c(1.0) {
+	need_stat(AVERAGE_LENGTH);
+	need_stat(DOC_LENGTH);
+	need_stat(DOC_LENGTH_MIN);
+	need_stat(DOC_LENGTH_MAX);
+	need_stat(COLLECTION_SIZE);
+	need_stat(COLLECTION_FREQ);
+	need_stat(WDF);
+	need_stat(WDF_MAX);
+	need_stat(WQF);
+	need_stat(TERMFREQ);
+    }
+
+    std::string name() const;
+
+    std::string serialise() const;
+    IfB2Weight * unserialise(const std::string & s) const;
+
+    double get_sumpart(Xapian::termcount wdf,
+		       Xapian::termcount doclen) const;
+    double get_maxpart() const;
+
+    double get_sumextra(Xapian::termcount doclen) const;
+    double get_maxextra() const;
+};
+
 }
 
 #endif // XAPIAN_INCLUDED_WEIGHT_H
