@@ -324,6 +324,17 @@ DEFINE_TESTCASE(weight1, !backend) {
     Xapian::InL2Weight inl2weight2(2.0);
     TEST_NOT_EQUAL(inl2weight.serialise(), inl2weight2.serialise());
 
+    Xapian::IfB2Weight ifb2weight_dflt;
+    Xapian::IfB2Weight ifb2weight(1.0);
+    TEST_EQUAL(ifb2weight.name(), "Xapian::IfB2Weight");
+    TEST_EQUAL(ifb2weight_dflt.serialise(), ifb2weight.serialise());
+    wt = Xapian::IfB2Weight().unserialise(ifb2weight.serialise());
+    TEST_EQUAL(ifb2weight.serialise(), wt->serialise());
+    delete wt;
+
+    Xapian::IfB2Weight ifb2weight2(2.0);
+    TEST_NOT_EQUAL(ifb2weight.serialise(), ifb2weight2.serialise());
+
     return true;
 }
 
