@@ -147,6 +147,57 @@ DEFINE_TESTCASE(inl2weight3, backend) {
     return true;
 }
 
+// Test exception for junk after serialised weight.
+DEFINE_TESTCASE(ifb2weight1, !backend) {
+    Xapian::IfB2Weight wt(2.0);
+    try {
+	Xapian::IfB2Weight b;
+	Xapian::IfB2Weight * b2 = b.unserialise(wt.serialise() + "X");
+	// Make sure we actually use the weight.
+	bool empty = b2->name().empty();
+	delete b2;
+	if (empty)
+	    FAIL_TEST("Serialised IfB2Weight with junk appended unserialised to empty name!");
+	FAIL_TEST("Serialised IfB2Weight with junk appended unserialised OK");
+    } catch (const Xapian::SerialisationError &) {
+
+    }
+    return true;
+}
+
+// Test for invalid values of c.
+DEFINE_TESTCASE(ifb2weight2, !backend) {
+    // InvalidArgumentError should be thrown if the parameter c is invalid.
+    TEST_EXCEPTION(Xapian::InvalidArgumentError,
+	Xapian::IfB2Weight wt(-2.0));
+
+    TEST_EXCEPTION(Xapian::InvalidArgumentError,
+	Xapian::IfB2Weight wt2(0.0));
+
+    /* Parameter c should be set to 1.0 by constructor if none is given. */
+    Xapian::IfB2Weight weight2;
+    TEST_EQUAL(weight2.serialise(), Xapian::IfB2Weight(1.0).serialise());
+
+    return true;
+}
+
+// Feature test
+DEFINE_TESTCASE(ifb2weight3, backend) {
+    Xapian::Database db = get_database("apitest_simpledata");
+    Xapian::Enquire enquire(db);
+    enquire.set_query(Xapian::Query("banana"));
+    Xapian::MSet mset;
+
+    enquire.set_weighting_scheme(Xapian::IfB2Weight(2.0));
+    mset = enquire.get_mset(0, 10);
+    TEST_EQUAL(mset.size(), 1);
+    /* The value of the weight has been manually calculated using the statistics
+     * of the test database. */
+    TEST_EQUAL_DOUBLE(mset[0].get_weight(), 3.119422287684126);
+
+    return true;
+}
+
 // Test for various cases of normalization string.
 DEFINE_TESTCASE(tfidfweight1, !backend) {
     // InvalidArgumentError should be thrown if normalization string is invalid
